--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/apitest
+spring.datasource.url=jdbc:mysql://localhost:3306/biglikuryer
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
