--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/biglikuryer
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=P@ssw0rd!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate configuration
