--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Tomcat-appserver configuration
+server.port=8303
+
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/biglikuryer
 spring.datasource.username=root
